    more compatible with Ruby 1.9.2 preview 2)
  * marinda-ls: can now disable server name check in SSL cert validation
    with check_server_name config item
  * marinda-ls: now deletes the server Unix socket on clean exit
  * marinda-gs and marinda-ls: improved descriptiveness of syslog messages
  * improved efficiency of communication between marinda-ls and marinda-gs

version 0.9.1, 2009-12-01
  * marinda-ls: fixed Ruby 1.9.x incompatibility that could cause a crash
  * marinda-gs: changed to not use SSL for a local server on 127.0.0.1
  * added support for RJudy (Ruby binding to Judy arrays), which significantly
    speeds up tuple space operations
  * added benchmarking script
  * marinda-gs: fixed to load new config on SIGHUP
  * added migrate-checkpoints to deal with incompatible checkpoints between
    Ruby 1.8.x and 1.9.x

version 0.9.0, 2009-11-19
  * global server is now single threaded and uses nonblocking I/O (including
    for SSL)
    - global server now only works with Ruby 1.9.2 preview 2 or later
    - local server will still work with earlier Ruby versions
  * new operations: take_all, consume, monitor_stream, consume_stream
  * new automated tests of basic, iteration, and stream operations
  * now uses configured server host name for validation of certs
  * disabled Nagle
  * BasicSocket.do_not_reverse_lookup is now true
  * marinda-gs removes the lock file after checkpoint-and-exit
  * fixed Ruby 1.9.2 preview 2 incompatibility
  * fixed Ruby 1.9.x incompatibility (e.g., string handling and syntax)
  * switched from sqlite3-ruby to Amalgalite (only affects global server)

version 0.8.0, 2009-03-16
  * added documentation: Installation and Client Programming Guides
    (the latter isn't complete)
  * marinda-gs & marinda-ls: added more validation of config values,
    implemented use of lock files, improved error reporting, and made
    other general improvements
  * added license text to source files in preparation for public release
