@@ -141,9 +141,17 @@ if $options.use_lock_file
   end
 end
 
-config = Marinda::LocalConfig.new $options.config_path
-config.export_debugging_flags()
-$log.debug "%p", config if $options.verbose
+begin
+  config = Marinda::LocalConfig.new $options.config_path
+  config.export_debugging_flags()
+  $log.debug "%p", config if $options.verbose
+
+rescue # Marinda::ConfigBase::MalformedConfigException & YAML exceptions
+  msg = $!.class.name + ": " + $!.to_s
+  $log.err "ERROR: couldn't load config from '%s': %s",
+    $options.config_path, msg
+  exit 1
+end
 
 # Perform require now to fail fast if this dependency doesn't exist.
 # This is usually better than failing part way through start up.
@@ -160,6 +168,10 @@ end
 # user really wants to change the connection settings, then he can simply
 # restart the local server.
 server_sock = UNIXServer.open config.socket
+if config.socket_access
+  $log.info "chmod %3o %s", config.socket_access, config.socket
+  File.chmod config.socket_access, config.socket
+end
 
 if config.use_ssl
   if (RUBY_VERSION.split(/\./).map {|x| x.to_i} <=> [1, 9, 2]) < 0
