@@ -96,11 +96,11 @@ class TemplateBag
 
 
   # The required block should take |session_id, request| and store the request
-  # into GlobalSpaceDemux.@ongoing_requests.  This ties together the
-  # RegionRequest objects restored in TemplateBag to the GlobalSpaceDemux.
+  # into GlobalSpace.@ongoing_requests.  This ties together the
+  # RegionRequest objects restored in TemplateBag to the GlobalSpace.
   #
   # The {sessions} argument should map session_id to a Context object restored
-  # in GlobalSpaceDemux.
+  # in GlobalSpace.
   def restore_state(state, checkpoint_id, port, sessions, worker)
     state.db.execute("SELECT session_id,operation,template FROM RegionTemplates
                        WHERE checkpoint_id=? AND port=?
